<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="J5y-TU-HOE">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Pokedex-->
        <scene sceneID="B9l-jU-lWG">
            <objects>
                <viewController id="9OK-jq-Cme" customClass="ViewController" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="V1T-vk-7N8">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <viewLayoutGuide key="safeArea" id="FVW-W6-4Pc"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Pokedex" image="iphone" catalog="system" id="pIh-tT-rUB"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="0gp-kc-NOJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="938" y="-617"/>
        </scene>
        <!--Discovery-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hAX-Nb-TZs">
                                <rect key="frame" x="151" y="433" width="112" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Pokemon found!"/>
                                <connections>
                                    <segue destination="K0r-el-PvI" kind="show" id="Zrb-Wx-Koz"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Discovery" image="globe" catalog="system" id="cmM-hX-bax"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="938" y="84"/>
        </scene>
        <!--Detail-->
        <scene sceneID="KNF-It-ecS">
            <objects>
                <viewControllerPlaceholder storyboardName="Detail" id="K0r-el-PvI" sceneMemberID="viewController">
                    <navigationItem key="navigationItem" id="J7z-ga-28a"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="g2T-lz-dxS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1950" y="84"/>
        </scene>
        <!--Tab Bar Controller-->
        <scene sceneID="0QG-iA-iiT">
            <objects>
                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="J5y-TU-HOE" sceneMemberID="viewController">
                    <toolbarItems/>
                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="eZp-eE-mkQ">
                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </tabBar>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="XLe-TR-LvY"/>
                        <segue destination="UVM-y9-hvP" kind="relationship" relationship="viewControllers" id="Y8i-2I-hp7"/>
                        <segue destination="9OK-jq-Cme" kind="relationship" relationship="viewControllers" id="T6e-F9-M8e"/>
                    </connections>
                </tabBarController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="1LL-fu-EKX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-58" y="84"/>
        </scene>
        <!--Search-->
        <scene sceneID="ZNv-uC-AyF">
            <objects>
                <viewController id="UVM-y9-hvP" customClass="ViewController" customModule="Pokedex" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="HBk-y1-en2">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <viewLayoutGuide key="safeArea" id="4yP-Am-COJ"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Search" image="magnifyingglass" catalog="system" id="Qys-sg-VMy"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="wNg-6r-VrD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="938" y="805"/>
        </scene>
    </scenes>
    <resources>
        <image name="globe" catalog="system" width="128" height="121"/>
        <image name="iphone" catalog="system" width="108" height="128"/>
        <image name="magnifyingglass" catalog="system" width="128" height="115"/>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
